--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^6.0.1
   cloud_firestore: ^6.0.0
   get: ^4.7.2
+  firebase_app_check: ^0.4.1
 
 dev_dependencies:
   flutter_test:
