--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^6.0.0
   get: ^4.7.2
   firebase_app_check: ^0.4.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
