--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_app_check: ^0.4.1
   intl: ^0.19.0
   http: ^1.2.2
+  shared_preferences: ^2.3.3
+  crypto: ^3.0.6
 
 dev_dependencies:
   flutter_test:
