feat(patient-booking): implement patient booking form and home page, and admin doctor management page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.2
   shared_preferences: ^2.3.3
   crypto: ^3.0.6
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_test:
